--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
-    "next": "^14.0.3",
+    "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,19 +24,18 @@
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
     "@heroicons/react": "^2.1.1",
-    "bcryptjs": "^2.4.3",
-    "prisma": "^5.7.0"
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "@types/bcryptjs": "^2.4.6"
+    "prisma": "^5.7.0",
+    "@types/next-auth": "^3.15.0"
   }
 }
