--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
@@ -24,7 +22,9 @@
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
     "@heroicons/react": "^2.1.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "sqlite3": "^5.1.6",
+    "better-sqlite3": "^9.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -35,7 +35,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "prisma": "^5.7.0",
-    "@types/next-auth": "^3.15.0"
+    "@types/better-sqlite3": "^7.6.8"
   }
 }
