--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate && next build",
+  "buildCommand": "next build",
   "installCommand": "npm install",
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
     "NEXTAUTH_URL": "https://${VERCEL_URL}",
-    "VERCEL_URL": "${VERCEL_URL}"
+    "VERCEL_URL": "${VERCEL_URL}",
+    "DATABASE_PATH": "/tmp/forex_analyzer.db"
   }
 }
