--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@heroicons/react": "^2.1.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -32,6 +33,7 @@
     "@types/node": "^20.10.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
