--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXTAUTH_URL": "https://${VERCEL_URL}",
+    "NEXTAUTH_URL": "${VERCEL_URL}",
     "VERCEL_URL": "${VERCEL_URL}",
     "POSTGRES_URL": "${POSTGRES_URL}",
     "POSTGRES_URL_NON_POOLING": "${POSTGRES_URL_NON_POOLING}"
