--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.5.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
@@ -22,18 +21,12 @@
     "html-entities": "^2.4.0",
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@heroicons/react": "^2.1.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1"
+    "@heroicons/react": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
