--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -21,7 +20,11 @@
     "html-entities": "^2.4.0",
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@heroicons/react": "^2.1.1"
+    "@heroicons/react": "^2.1.1",
+    "@vercel/postgres": "^0.5.1",
+    "next-auth": "^4.24.5",
+    "bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
