--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.5.1",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "next-auth": "^4.24.5",
     "axios": "^1.6.2",
     "zustand": "^4.4.7",
-    "date-fns": "^2.30.0",
     "react-hot-toast": "^2.4.1",
     "html-entities": "^2.4.0",
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
     "@heroicons/react": "^2.1.1",
-    "@vercel/postgres": "^0.5.1",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
-    "@types/bcryptjs": "^2.4.6"
+    "xml2js": "^0.6.2",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
