--- a/vercel.json
+++ b/vercel.json
@@ -6,16 +6,6 @@
   "regions": ["iad1"],
   "env": {
     "NEXTAUTH_URL": "${VERCEL_URL}",
-    "VERCEL_URL": "${VERCEL_URL}",
-    "POSTGRES_URL": "${POSTGRES_URL}",
-    "POSTGRES_URL_NON_POOLING": "${POSTGRES_URL_NON_POOLING}"
-  },
-  "build": {
-    "env": {
-      "NEXTAUTH_URL": "${VERCEL_URL}",
-      "VERCEL_URL": "${VERCEL_URL}",
-      "POSTGRES_URL": "${POSTGRES_URL}",
-      "POSTGRES_URL_NON_POOLING": "${POSTGRES_URL_NON_POOLING}"
-    }
+    "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}"
   }
 }
