--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
   "regions": ["iad1"],
   "env": {
     "NEXTAUTH_URL": "${VERCEL_URL}",
-    "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}"
+    "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}",
+    "POSTGRES_URL": "${POSTGRES_URL}",
+    "POSTGRES_PRISMA_URL": "${POSTGRES_URL}?pgbouncer=true&connect_timeout=15",
+    "POSTGRES_URL_NON_POOLING": "${POSTGRES_URL}?connect_timeout=15"
   }
 }
