--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
     "@heroicons/react": "^2.1.1",
-    "xml2js": "^0.6.2",
-    "bcryptjs": "^2.4.3"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
-    "@types/bcryptjs": "^2.4.6",
     "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
