--- a/package.json
+++ b/package.json
@@ -5,29 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.5.1",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-auth": "^4.24.5",
     "axios": "^1.6.2",
     "zustand": "^4.4.7",
     "react-hot-toast": "^2.4.1",
     "html-entities": "^2.4.0",
     "react-markdown": "^9.0.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@heroicons/react": "^2.1.1",
-    "xml2js": "^0.6.2"
+    "@heroicons/react": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
-    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
