--- a/package.json
+++ b/package.json
@@ -14,18 +14,15 @@
     "axios": "^1.6.2",
     "zustand": "^4.4.7",
     "react-hot-toast": "^2.4.1",
-    "html-entities": "^2.4.0",
-    "react-markdown": "^9.0.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "@heroicons/react": "^2.1.1"
+    "@heroicons/react": "^2.1.1",
+    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/node": "^20.10.4",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
