--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,5 @@
   "buildCommand": "next build",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "NEXTAUTH_SECRET": "your-secret-key-here"
-  }
+  "regions": ["iad1"]
 }
