--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forex-analyzer-pro",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,14 +15,17 @@
     "zustand": "^4.4.7",
     "react-hot-toast": "^2.4.1",
     "@heroicons/react": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "typescript": "^5.2.2",
     "tailwindcss": "^3.3.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@types/node": "^20.10.4",
-    "typescript": "^5.2.2"
   }
 }
