--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "zustand": "^4.4.7",
     "react-hot-toast": "^2.4.1",
     "@heroicons/react": "^2.1.1",
-    "date-fns": "^2.30.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
