--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "forex-analyzer-pro",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "axios": "^1.6.2",
@@ -18,12 +18,13 @@
     "date-fns": "^2.30.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.2.2",
     "tailwindcss": "^3.3.5",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "vite": "^5.0.0"
   }
 }
