--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "zustand": "^4.4.7",
     "react-hot-toast": "^2.4.1",
     "@heroicons/react": "^2.1.1",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "html-entities": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
